# Hackathon-II-Todo-App-

./: CLAUDE.md  pyproject.toml  tmpclaude-b7c9-cwd
.claude/agents/: hackathon-judge.md  todo-domain-expert.md
.claude/skills/: qa.test-coverage.md
.specify/memory/: constitution.md
Phase 2 (Todo Full Stack)/: .gitignore  BACKEND_DEPLOYMENT_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  environment-setup.md
Phase 2 (Todo Full Stack)/.claude/: settings.local.json
Phase 2 (Todo Full Stack)/backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt
Phase 2 (Todo Full Stack)/frontend/: package-lock.json  package.json  tailwind.config.ts
Phase-1/src/: __init__.py  cli.py  task.py
Phase-1/tests/: __init__.py
Phase-2/: .gitignore  DEPLOYMENT_ACHIEVEMENT_SUMMARY.md  data-model.md  deployment-guide.md  docker-compose.yml  package.json  setup.bat  setup.sh  test_app.py
Phase-2/backend/: database.py  main.py  requirements.txt
Phase-2/frontend/: .gitignore  Dockerfile  README.md  TESTING.md  package-lock.json  package.json  tailwind.config.ts
Phase-3/: .gitignore  CLAUDE.md  README.md
Phase-3/.claude/: settings.local.json
Phase-3/backend/: .gitignore  add_name_column.py  alembic.ini  database.py  delete_user.py  main.py  mcp_config.py  models.py  requirements.txt  reset_db.py
Phase-3/frontend/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
Phase-4/.spec-kit/: config.yaml
Phase-4/backend/: .dockerignore  Dockerfile  auth.py  check_db.py  (+4 more)
src/: task_manager.py
tests/: manual_test_plan.md
(+428 files in other folders)
